--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 text-white">Servicio</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Beneficios</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Valores</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Precios</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
         </ul>
 
@@ -56,16 +56,16 @@
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-light">
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input type="name" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Nombre</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Apellido</label>
+            <input type="name" class="form-control" id="floatingInput" placeholder="Password">
+            <label for="floatingInput">Apellido</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">E-mail</label>
+            <input type="email" class="form-control" id="floatingInput" placeholder="Password">
+            <label for="floatingInput">E-mail</label>
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Prueba Smarket Ahora</button>
           <hr class="my-4">
@@ -220,7 +220,7 @@
         <thead>
           <tr>
             <th style="width: 34%;"></th>
-            <th style="width: 22%;">Free</th>
+            <th style="width: 22%;">Gratis</th>
             <th style="width: 22%;">Pro</th>
             <th style="width: 22%;">Enterprise</th>
           </tr>
