--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-light">
           <div class="form-floating mb-3">
-            <input type="name" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Nombre</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="name" class="form-control" id="floatingInput" placeholder="Password">
+            <input type="text" class="form-control" id="floatingInput" placeholder="Password">
             <label for="floatingInput">Apellido</label>
           </div>
           <div class="form-floating mb-3">
@@ -75,7 +75,7 @@
   </div>
 </main>
 
-<main>
+
 	<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -97,9 +97,9 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-</main>
 
-<div class="container px-4 py-5" id="custom-cards">
+
+  <div class="container px-4 py-5" id="custom-cards">
     <h2 class="pb-2 border-bottom">Beneficios</h2>
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
@@ -152,7 +152,7 @@
 
 <div class="container py-3">
   <header>
-    <div class="container px-4 py-5" id="custom-cards">
+    <div class="container px-4 py-5">
       <h2 class="pb-2 border-bottom">Precios</h2>
       <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
     </div>
@@ -273,7 +273,7 @@
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
       <div class="col-12 col-md">
-        <img class="mb-2" src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="24" height="19">
+        <img class="mb-2" src="img/SmarketLogo2.png" alt="" width="24" height="19">
         <small class="d-block mb-3 text-muted">© 2017–2021</small>
       </div>
       <div class="col-6 col-md">
