--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">SURTIDO IDEAL</h2>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
+                <img src="img/iisomkt.png" alt="Bootstrap" width="32" height="32">
               </li>
           </div>
         </div>
@@ -120,6 +121,7 @@
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">SIMPLIFICA TUS PROCESOS</h2>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
+                <img src="img/iisomkt.png" alt="Bootstrap" width="32" height="32">
               </li>
           </div>
         </div>
@@ -131,6 +133,8 @@
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">BOLETA ELECTRONICA</h2>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
+                <img src="img/iisomkt.png" alt="Bootstrap" width="32" height="32"> 
+                <!---class="rounded-circle border border-white"-->
               </li>
             </ul>
           </div>
@@ -270,7 +274,7 @@
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
       <div class="col-12 col-md">
-        <img class="mb-2" src="img/SmarketLogo2.png" alt="" width="24" height="19">
+        <img class="mb-2" src="img/iisomkt.png" alt="" width="32" height="32">
         <small class="d-block mb-3 text-muted">© 2017–2021</small>
       </div>
       <div class="col-6 col-md">
