--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 text-white">Servicio</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Beneficios</a></li>
+          <li><a href="#custom-cards" class="nav-link px-2 text-white">Beneficios</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Precios</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
         </ul>
