--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 text-white">Servicio</a></li>
           <li><a href="#custom-cards" class="nav-link px-2 text-white">Beneficios</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Precios</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Nosotros</a></li>
+          <li><a href="#custom-precios" class="nav-link px-2 text-white">Precios</a></li>
+          <li><a href="#custom-compara" class="nav-link px-2 text-white">Planes</a></li>
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+          <input type="search" class="form-control form-control-dark" placeholder="Buscar..." aria-label="Search">
         </form>
 
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          <button type="button" class="btn btn-outline-light me-2">Registrate</button>
+          <button type="button" class="btn btn-warning">Ingresa</button>
         </div>
       </div>
     </div>
@@ -99,6 +99,7 @@
 
   <div class="container px-4 py-5" id="custom-cards">
     <h2 class="pb-2 border-bottom">Beneficios</h2>
+    <p class="fs-5 text-muted">La APP de Smarket es una solución real que acerca la gestión de los grandes retailers a los almacenes de todo el país. Podrás determinar tus productos más vendidos, sus días de invetario y tiempo de entrega de los distintos proveedores</p>
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
       <div class="col">
@@ -149,11 +150,11 @@
   </symbol>
 </svg>
 
-<div class="container py-3">
+<div class="container py-3" id="custom-precios">
   <header>
     <div class="container px-4 py-5">
       <h2 class="pb-2 border-bottom">Precios</h2>
-      <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+      <p class="fs-5 text-muted">Rápida puesta en marcha y precios muy convenientes.</p>
     </div>
   </header>
 
@@ -162,77 +163,78 @@
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">Free</h4>
+            <h4 class="my-0 fw-normal">Plan Gratis</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h1>
+            <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/sin costo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>10 users included</li>
-              <li>2 GB of storage</li>
-              <li>Email support</li>
-              <li>Help center access</li>
+              <li>Utiliza Gestión POS de forma gratuita!</li>
+              <li>Podrás tener 1 usuario en el sistema</li>
+              <li>Hasta 100 ventas mensuales</li>
+              <li>Acceso a soporte 24/7</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Empieza Gratis</button>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">Pro</h4>
+            <h4 class="my-0 fw-normal">Plan Pyme</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light">/mo</small></h1>
+            <h1 class="card-title pricing-card-title">0.50 UF + IVA<small class="text-muted fw-light">/al mes</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>20 users included</li>
-              <li>10 GB of storage</li>
-              <li>Priority email support</li>
-              <li>Help center access</li>
+              <li>Accede a un pack de funciones de Gestión POS</li>
+              <li>Podrás tener 2 usuario en el sistema</li>
+              <li>Hasta 1000 ventas mensuales</li>
+              <li>Acceso a soporte 24/7</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+            <button type="button" class="w-100 btn btn-lg btn-primary">Empieza Ahora</button>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm border-primary">
           <div class="card-header py-3 text-white bg-primary border-primary">
-            <h4 class="my-0 fw-normal">Enterprise</h4>
+            <h4 class="my-0 fw-normal">Plan Pro</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small></h1>
+            <h1 class="card-title pricing-card-title">2.00 UF + IVA<small class="text-muted fw-light">/al mes</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>30 users included</li>
-              <li>15 GB of storage</li>
-              <li>Phone and email support</li>
-              <li>Help center access</li>
+              <li>Accede a todas las funciones de Gestión POS</li>
+              <li>Podrás tener 5 usuario en el sistema</li>
+              <li>Hasta 5000 ventas mensuales</li>
+              <li>Acceso a soporte 24/7</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+            <button type="button" class="w-100 btn btn-lg btn-primary">Empieza Ahota</button>
           </div>
         </div>
       </div>
     </div>
 
-    <h2 class="display-6 text-center mb-4">Compare plans</h2>
 
-    <div class="table-responsive">
+    <div class="table-responsive" id="custom-compara">
+      <h2 class="pb-2 border-bottom">Comparación de Planes</h2>
+      <p class="fs-5 text-muted">Encuentra el plan mas adecuado a tu necesidad.</p>
       <table class="table text-center">
         <thead>
           <tr>
             <th style="width: 34%;"></th>
             <th style="width: 22%;">Gratis</th>
+            <th style="width: 22%;">Pyme</th>
             <th style="width: 22%;">Pro</th>
-            <th style="width: 22%;">Enterprise</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row" class="text-start">Public</th>
+            <th scope="row" class="text-start">Publico</th>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
           </tr>
           <tr>
-            <th scope="row" class="text-start">Private</th>
+            <th scope="row" class="text-start">Privado</th>
             <td></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
@@ -241,25 +243,25 @@
 
         <tbody>
           <tr>
-            <th scope="row" class="text-start">Permissions</th>
+            <th scope="row" class="text-start">Inventario</th>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
           </tr>
           <tr>
-            <th scope="row" class="text-start">Sharing</th>
+            <th scope="row" class="text-start">Sicronización con SII</th>
             <td></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
           </tr>
           <tr>
-            <th scope="row" class="text-start">Unlimited members</th>
+            <th scope="row" class="text-start">Dispositivo POS</th>
             <td></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
           </tr>
           <tr>
-            <th scope="row" class="text-start">Extra security</th>
+            <th scope="row" class="text-start">Plataforma e-commerce</th>
             <td></td>
             <td></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"></use></svg></td>
@@ -276,32 +278,30 @@
         <small class="d-block mb-3 text-muted">© 2017–2021</small>
       </div>
       <div class="col-6 col-md">
-        <h5>Features</h5>
+        <h5>Servicios</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Nuestra App</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Dispositivos</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Invetarios</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Conexión SII</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>Resources</h5>
+        <h5>Recursos</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Propuesta de Surtido</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Propuesta de Margen</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Plataforma E-Commerce</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Asesoria Constante</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>About</h5>
+        <h5>Nosotros</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Equipo</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Dirección</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Privacidad</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terminos</a></li>
         </ul>
       </div>
     </div>
