--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <input type="email" class="form-control" id="txtfono" placeholder="Telefono">
             <label for="txtfono">Telefono</label>
           </div>
-          <botton id="btn_registro" type="botton" class="w-100 btn btn-lg btn-primary" onclick="validar(this)">Prueba Smarket Ahora</botton>
+          <button id="btn_registro" type="botton" class="w-100 btn btn-lg btn-primary" onclick="validar(this)">Prueba Smarket Ahora</button>
           <hr class="my-4">
         </form>
       </div>
