--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <input type="email" class="form-control" id="txtfono" placeholder="Telefono">
             <label for="txtfono">Telefono</label>
           </div>
-          <button id="btn_registro" type="botton" class="w-100 btn btn-lg btn-primary" onclick="validar(this)">Prueba Smarket Ahora</button>
+          <button id="btn_registro" type="button" class="w-100 btn btn-lg btn-primary" onclick="validar(this)">Prueba Smarket Ahora</button>
           <hr class="my-4">
         </form>
       </div>
@@ -103,18 +103,19 @@
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('unsplash-photo-1.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/surtido.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">SURTIDO IDEAL</h2>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
                 <img src="img/iisomkt.png" alt="Bootstrap" width="32" height="32">
               </li>
+          </div>
         </div>
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/simplifica.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">SIMPLIFICA TUS PROCESOS</h2>
             <ul class="d-flex list-unstyled mt-auto">
@@ -126,7 +127,7 @@
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('unsplash-photo-3.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/boleta.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">BOLETA ELECTRONICA</h2>
             <ul class="d-flex list-unstyled mt-auto">
